@@ -9,6 +9,10 @@ serdi [OPTION]... INPUT BASE_URI
 .SH OPTIONS
 
 .TP
+\fB\-a\fR
+Write ASCII output if possible.
+
+.TP
 \fB\-b\fR
 Fast bulk output for large serialisations.
 
