@@ -1,5 +1,6 @@
 serd (0.29.3) unstable;
 
+  * Add serdi option to write ASCII output
   * Make serdi guess input syntax from extension if unspecified
   * Make serdi syntax options case-insensitive
   * Add basic error tolerant parsing for line-based formats
@@ -10,7 +11,7 @@ serd (0.29.3) unstable;
   * Fix building with MSVC
   * Clean up testing code
 
- -- David Robillard <d@drobilla.net>  Sun, 24 Sep 2017 18:51:27 +0200
+ -- David Robillard <d@drobilla.net>  Sun, 24 Dec 2017 14:14:15 -0500
 
 serd (0.28.0) stable;
 
